# kublens

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .prettierignore  .trivyignore  CHANGELOG.md  DESIGN.md  Dockerfile  GHOST_CLUSTER_SPEC.md  PRODUCT.md  README.md  RUN_AND_USE.md  ULTRA_SCALE_VISION.md  codex_refactor_instructions.md  docker-compose.yml  eslint.config.js  frontend_improvement_analysis.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  codeql.yml  docs-governance.yml  release-supply-chain.yml
backend/: go.mod  go.sum
backend/internal/: README.md
backend/internal/ai/: openai_compatible.go
backend/internal/auth/: middleware.go  middleware_test.go  rbac.go  rbac_test.go
backend/internal/bootstrap/: bootstrap.go
backend/internal/cluster/: mapper_k8s.go  query_cluster_pods.go
backend/internal/config/: config_load.go  config_parse.go  config_runtime.go  config_test.go  config_types.go
backend/internal/db/: db.go  dialect.go  dialect_test.go  schema.go
backend/internal/diagnostics/: analysis_pod_test.go
backend/internal/ghost/: client.go  client_test.go  simulator.go  store.go  topology.go  topology_test.go
backend/internal/gitops/: artifact.go
backend/internal/httpapi/: alert_lifecycle_store.go  alerts_lifecycle_test.go  assistant_response.go  assistant_tools.go  audit.go  audit_test.go  auth.go  auth_audit_test.go  cluster_selector.go  contract_test.go  diagnostics.go  gitops_helpers.go  handlers_alerts.go  handlers_cluster.go  handlers_cluster_nodes.go  handlers_cluster_pods.go  handlers_cluster_pods_test.go  handlers_cluster_resources.go  handlers_experimental.go  handlers_ghost.go  handlers_ghost_test.go  handlers_incident.go  handlers_ops_test.go  handlers_predictions.go  handlers_remediation.go  handlers_rightsizing.go  handlers_riskguard.go  handlers_slo.go  health.go  health_test.go  metrics_prometheus.go  multicluster_alerts_test.go  node_telemetry_store.go  node_telemetry_store_test.go  openapi.yaml  production_readiness.go  routes.go  routes_mount.go  security_headers.go  security_test.go  (+6 more)
backend/internal/incident/: replay_evidence.go  store.go  store_test.go
backend/internal/memory/: sql_store.go  store.go  store_helpers.go  store_search.go  store_test.go
backend/internal/model/: types_auth_audit.go  types_cluster.go  types_ghost.go  types_gitops_rightsizing.go  types_governance.go  types_incident_phase1.go  types_incident_remediation.go  types_production_readiness.go  types_runtime_diagnostics.go  types_slo.go
backend/internal/postmortem/: store.go  store_test.go
backend/internal/rag/: embedding_client.go  service_index.go  service_retrieve.go
docs/: ARCHITECTURE.md  DOCUMENTATION_GOVERNANCE.md  FEATURES.md  IMPLEMENTATION_PROGRAM.md  OPERATIONS_VERIFICATION.md  PREDICTOR_ML_READINESS.md  REGISTRY_RELEASE.md  SECRET_ROTATION_RUNBOOK.md  SECURITY.md  SUPPLY_CHAIN_POLICY.md  THREAT_MODEL.md  api.md
docs/runbooks/: backup-restore.md  failed-migration.md  production-readiness.md  write-gate.md
e2e/: auth-role-matrix.spec.ts  dashboard-smoke.spec.ts  incident-lifecycle.spec.ts  incident-remediation-ui.spec.ts  perf-smoke.spec.ts  workspace-panels.spec.ts
ghost-engine/: CMakeLists.txt  Dockerfile  README.md
ghost-engine/src/: main.cc  simulator.cc  simulator.h
ghost-engine/tests/: simulator_taints_test.cc
helm/kubelens/: Chart.yaml  values.yaml
k8s/: README.md  secret.example.yaml
k8s/base/: configmap.yaml  deployment.yaml  ghost-engine-deployment.yaml  ghost-engine-service.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  predictor-deployment.yaml
predictor/: Dockerfile  requirements-dev.txt  requirements-ml.txt  requirements.txt
predictor/app/: main.py  ml_prototype.py  train_model.py
predictor/tests/: test_main.py  test_ml_prototype.py
scripts/: ci-backend.mjs  go-task.mjs  verify-doc-impact.mjs  verify-release.mjs
src/: index.css
src/app/: AppShell.tsx  viewNavigation.ts
src/components/: ErrorBoundary.tsx  Sidebar.tsx  viewIcons.ts
src/features/: viewCatalog.ts
src/lib/: api.ts
src/test/: dependency-versions.test.tsx
src/types/: audit.ts  ghost.ts  incident.ts  index.ts  rightsizing.ts  risk.ts  slo.ts  system.ts  view.ts
(+108 files in other folders)
